WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241651
[JSC] CommonSlowPaths::putDirectWithReify() is incorrect for DontDelete properties
https://bugs.webkit.org/show_bug.cgi?id=241651
Summary
[JSC] CommonSlowPaths::putDirectWithReify() is incorrect for DontDelete prope...
Alexey Shvayka
Reported
2022-06-15 15:20:55 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2022-06-15 15:44:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1551
EWS
Comment 2
2022-06-16 13:12:39 PDT
Committed
r295608
(
251613@main
): <
https://commits.webkit.org/251613@main
> Reviewed commits have been landed. Closing PR #1551 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-06-16 13:13:13 PDT
<
rdar://problem/95325351
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug